Fix DLLR EIP-2612 bug with Permit2
* introduce: permit2

* update nonce mechanism

* add permit2 deployment file

* add SIP args & onchain test

* add unit test for signature exploit pervention

* consider new function to implement permit2

* add MocIntegration deployment file testnet

* remove nonce in the permit2 integrated contract

* add testnet deployment files

* add mainnet deployment for MocIntegration

* .prettierignore permit2 folder contracts

* update dist

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
         "init": "yarn install && set TS_NODE_TRANSPILE_ONLY=1 && yarn hardhat compile --force",
         "prepare": "yarn patch-package && rm -rf ./dist/ && set TS_NODE_TRANSPILE_ONLY=1 && yarn hardhat compile --force && tsc",
         "contract-sizes": "yarn hardhat size-contracts",
+        "prettify": "prettier --write tests/**/*.ts types/generated/*.ts types/**/*.ts contracts/**/*.sol",
         "prettify-sol": "prettier --write contracts/{*,**/*,**/**/*,**/**/**/*,**/**/**/**/*}.sol 2>&1 | grep -v 'No files matching the pattern were found'",
-        "prettify": "prettier --write test/**/*.ts types/generated/*.ts types/**/*.ts contracts/**/*.sol",
         "prettier-check": "prettier --check .",
         "prettier-check-sol": "prettier --check contracts/{*,**/*,**/**/*,**/**/**/*,**/**/**/**/*}.sol 2>&1 | grep -v 'No files matching the pattern were found'",
         "flatten": "sol-merger \"./contracts/[^fish]**/*.sol\" ./_flat",
@@ -80,6 +80,7 @@
         "@typescript-eslint/eslint-plugin": "^5.44.0",
         "@typescript-eslint/eslint-plugin-tslint": "^5.44.0",
         "@typescript-eslint/parser": "^5.44.0",
+        "@uniswap/permit2-sdk": "^1.2.0",
         "chai": "^4.3.7",
         "chai-bn": "^0.3.1",
         "chai-core": "^5.0.0-alpha.2",
